feat(server): add "get users" endpoint
